fixed spacing

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -103,6 +103,7 @@ p.italic {font-style:italic;}
 
 .img {
     height: 125px;
+    max-width: 255px;*/
 }
 
 /*.btn-info {
